<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Learn at Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your details first</string>
    <string name="title_login_page">Ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="story_app">Story App</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="menu_setting_language">Language Settings Menu</string>
    <string name="menu_logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="upload_story">Upload Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="error_description_empty">Description must not be empty</string>
    <string name="login_image">Login Image</string>
    <string name="signup_image">Signup Image</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="location">Location</string>
</resources>
